SVG text selection has bugs with collapsed whitespace

SVG text selection has bugs with collapsed whitespace
https://bugs.webkit.org/show_bug.cgi?id=248357
rdar://problem/102933142

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=194860 &
https://src.chromium.org/viewvc/blink?revision=194744&view=revision

This patch introduces helper function 'squaredDistanceToClosestPoint' to calculate the closestPoint distance
and later leverages on to fix SVG text selection bug with collapsed whitespace.
This patch also update 'SelectionTestCase.js' to fix mouse position because of coordinate truncation in 'mouseMoveTo'.

* Source/WebCore/rendering/svg/RenderSVGInlineText.cpp:
(squaredDistanceToClosestPoint): Helper function
(RenderSVGInlineText::positionForPoint):
(1) Add ASSERT on m_scalingFactor
(2) Use 'm_scalingFactor' to divide baseline
(3) Calculate 'distance' based on helper function and update 'if' clause as well
* LayoutTests/svg/text/resources/SelectionTestCases.js: Update to adjust for mouse position event if 'eventSender' truncates coordinates
* LayoutTests/svg/text/select-svg-text-with-collapsed-whitespace.html: Add Test Case
* LayoutTests/svg/texst/select-svg-text-with-collapsed-whitespace-expected.txt: Add Test Case Expectation